Fix radio button spacing

--- a/src/components/Donate/donate.scss
+++ b/src/components/Donate/donate.scss
@@ -20,6 +20,7 @@
 				top: -3px;
 				width: 20px;
 				height: 20px;
+				margin-left: -28px;
 				content: '';
 				border: 1px solid #3e97eb;
 			}
